<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id = "@+id/btnGenerateGamma"
        android:text="@string/strGenerateGamma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strGeneratedGamma"/>

    <TextView
        android:id = "@+id/tvGeneratedGamma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id = "@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="8"/>

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Encrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCypheredPhrese"/>

    <TextView
        android:id="@+id/tvCipheredPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id = "@+id/btnDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strDecrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDecryptedPhrase"/>

    <TextView
        android:id="@+id/tvDecryptedPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id = "@+id/btnClean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clean"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
